--- a/.env.etl
+++ b/.env.etl
@@ -15,12 +15,13 @@ REDIS_PORT=6379
 # ========= Redis Commander  =========
 REDIS_COMMANDER_PORT=8082
 
-# ========= MSSQL (OLTP) =========
+# Conexión MSSQL (OLTP con CDC)
 MSSQL_HOST=sqlserver
 MSSQL_PORT=1433
 MSSQL_DB=Tablero_DB
 MSSQL_USER=sa
 MSSQL_PASSWORD=YourStrong!Passw0rd
+MSSQL_ODBC_DRIVER=ODBC Driver 18 for SQL Server
 
 # ODBC Driver en Linux para contenedor 
 MSSQL_ODBC_DRIVER=ODBC Driver 18 for SQL Server
@@ -44,3 +45,10 @@ SOURCE_SCHEMA=dbo
 
 # ========= Logs / Otros =========
 PYTHONUNBUFFERED=1
+
+# ===== Replicator =====
+REPL_BATCH_SECONDS=15
+REPL_LOG_LEVEL=INFO
+
+# Tablas (por si quieres filtrar)
+REPL_TABLES=Localidades,Equipos,Jugadores,Partidos,Cuartos,Anotacion,Falta
