--- a/etl/Dockerfile
+++ b/etl/Dockerfile
@@ -2,22 +2,25 @@ FROM python:3.11-slim
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Dependencias para ODBC y compilacion
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl gnupg2 apt-transport-https ca-certificates \
-    unixodbc unixodbc-dev gcc g++ build-essential \
-    && rm -rf /var/lib/apt/lists/*
-
-# Instalar Microsoft ODBC para SQL Server
-RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
-    curl https://packages.microsoft.com/config/debian/12/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
+        curl \
+        gnupg \
+        apt-transport-https \
+        unixodbc-dev \
+        build-essential && \
+    mkdir -p /etc/apt/keyrings && \
+    curl -sSL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor -o /etc/apt/keyrings/microsoft.gpg && \
+    echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/microsoft.gpg] https://packages.microsoft.com/debian/12/prod bookworm main" \
+        > /etc/apt/sources.list.d/mssql-release.list && \
     apt-get update && ACCEPT_EULA=Y apt-get install -y msodbcsql18 && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-COPY requirements.txt /app/
+
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . /app/
+COPY . .
 
-CMD ["python", "etl_run.py"]
+EXPOSE 8000
+CMD ["python", "etl.py"]
