--- a/replication/replicator/Dockerfile
+++ b/replication/replicator/Dockerfile
@@ -1,20 +1,26 @@
 FROM python:3.11-slim
 
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl gnupg2 apt-transport-https ca-certificates \
-    unixodbc unixodbc-dev gcc g++ build-essential \
- && rm -rf /var/lib/apt/lists/*
 
-# ODBC Driver MSSQL 18
-RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
-    curl https://packages.microsoft.com/config/debian/12/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
+RUN apt-get update && apt-get install -y --no-install-recommends \
+        curl \
+        gnupg \
+        apt-transport-https \
+        unixodbc-dev \
+        build-essential && \
+    mkdir -p /etc/apt/keyrings && \
+    curl -sSL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor -o /etc/apt/keyrings/microsoft.gpg && \
+    echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/microsoft.gpg] https://packages.microsoft.com/debian/12/prod bookworm main" \
+        > /etc/apt/sources.list.d/mssql-release.list && \
     apt-get update && ACCEPT_EULA=Y apt-get install -y msodbcsql18 && \
     rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-COPY requirements.txt /app/
+
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . /app/
+COPY . .
+
+EXPOSE 8000
 CMD ["python", "replicator.py"]
